[package]
name = "mq135"
version = "0.1.0"
edition = "2024"
authors = ["Prabesh Shrestha <prabesh.sh3.14@gmail.com>"]
description = "Rust embedded driver for MQ135 air quality sensor"
repository = "https://github.com/prabesh-shrestha/mq135"
license = "MIT"
categories = ["embedded", "no-std", "sensor"]
keywords = ["mq135", "gas", "sensor", "embedded-hal"]

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"
